Add more paragraphs

--- a/index.html
+++ b/index.html
@@ -3,51 +3,142 @@
 <head>
     <title>Lamborghini - Вікіпедія</title>
     <link rel="stylesheet" href="./style.css">
-    <meta charset="UTF-8" >
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-    <main>
+<main>
     <header class="header-list ">
-            <div class="header-start">
-                <input type="checkbox" role="button" aria-haspopup="true" data-event-name="dropdown" class="checkbox" aria-label="Main menu" aria-expanded="false">
+        <div class="header-start">
+            <input type="checkbox" role="button" aria-haspopup="true" data-event-name="dropdown" class="checkbox"
+                   aria-label="Main menu" aria-expanded="false">
 
-                <a href="https://en.wikipedia.org/wiki/Main_Page" class="mw-logo">
-                    <img class="logo-icon" src="https://en.wikipedia.org/static/images/icons/wikipedia.png" alt="" aria-hidden="true" height="50" width="50">
-                    <span class="logo-span">
-		                <img class="logo-wordmark" alt="Wikipedia" src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-wordmark-en.svg" style="width: 7.5em; height: 1.125em;">
-		                <img class="logo-tagline" alt="The Free Encyclopedia" src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-tagline-en.svg" width="117" height="13" style="width: 7.3125em; height: 0.8125em;">
+            <a href="https://en.wikipedia.org/wiki/Main_Page" class="mw-logo">
+                <img class="logo-icon" src="https://en.wikipedia.org/static/images/icons/wikipedia.png" alt=""
+                     aria-hidden="true" height="50" width="50">
+                <span class="logo-span">
+		                <img class="logo-wordmark" alt="Wikipedia"
+                             src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-wordmark-en.svg"
+                             style="width: 7.5em; height: 1.125em;">
+		                <img class="logo-tagline" alt="The Free Encyclopedia"
+                             src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-tagline-en.svg"
+                             width="117" height="13" style="width: 7.3125em; height: 0.8125em;">
 	                </span>
-                </a>
-                <div class="search">
-                    <input class="input" placeholder="Search Wikipedia" type="text">
-                    <button class="search-button">Search</button>
+            </a>
+            <div class="search">
+                <input class="input" placeholder="Search Wikipedia" type="text">
+                <button class="search-button">Search</button>
+            </div>
+        </div>
+
+        <div class="registration">
+            <a href="#" alt="Create account">Create account</a>
+            <a href="#" alt="Log in" style=" margin-left: 10px">Log in</a>
+        </div>
+    </header>
+    <div>
+        <ul class="left-side-menu">
+            <li><a href="#">(Top) </a></li>
+            <li><a href="#History">History</a></li>
+            <li><a href="#Products">Products</a></li>
+            <li><a href="#Motorsport">Motorsport</a></li>
+        </ul>
+    </div>
+    <div>
+        <h1>Lamborghini</h1>
+
+        <div class="tool-bar">
+            <div class="flex-div">
+                <p>Article</p>
+                <p>Talk</p>
+            </div>
+            <div class="flex-div">
+                <p>Read</p>
+                <p>View source</p>
+                <p>View history</p>
+                <p>Tools</p>
+            </div>
+        </div>
+        From Wikipedia, the free encyclopedia
+        <p class="insert">For other uses, see Lamborghini (disambiguation).</p>
+        <div>
+            <div class="right-block-position">
+                <span class="table-name">Automobili Lamborghini S.p.A.</span>
+                <div class="right-block">
+                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/df/Lamborghini_Logo.svg/180px-Lamborghini_Logo.svg.png">
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Lamborghini_logo.svg/200px-Lamborghini_logo.svg.png">
+                    <div>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg/220px-Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg">
+                        <span>Headquarters in Sant'Agata Bolognese</span>
+                    </div>
+                    <lable>
+                        <lable>
+                            Type
+                        </lable>
+                        <lable>
+                            Subsidiary
+                        </lable>
+                    </lable>
+
                 </div>
             </div>
-
-            <div class="registration">
-                <a href="#" alt="Create account">Create account</a>
-                <a href="#" alt="Log in" style=" margin-left: 10px">Log in</a>
+            <div class="content">
+                <p><b>Automobili Lamborghini S.p.A.</b> (<label class="little-text">Italian pronunciation:</label> [<a
+                        href="https://en.wikipedia.org/wiki/Help:IPA/Italian">autoˈmɔːbili lamborˈɡiːni]</a> )
+                    is an Italian manufacturer of luxury <a href="https://en.wikipedia.org/wiki/Sports_car"> sports
+                        cars</a> and
+                    <a href="https://en.wikipedia.org/wiki/SUV"> SUVs</a> based in Sant'Agata Bolognese. The company is
+                    owned by
+                    the Volkswagen Group through its subsidiary Audi.
+                </p>
+                <p>Ferruccio Lamborghini (1916–1993), an Italian manufacturing magnate, founded Automobili Ferruccio
+                    Lamborghini
+                    S.p.A. in 1963 to compete with Ferrari. The company was noted for using a rear mid-engine,
+                    rear-wheel drive layout.
+                    Lamborghini grew rapidly during its first decade, but sales plunged in the wake of the 1973
+                    worldwide financial downturn and the oil crisis.
+                    The firm's ownership changed three times after 1973, including a bankruptcy in 1978.
+                    American Chrysler Corporation took control of Lamborghini in 1987 and sold it to Malaysian
+                    investment group Mycom Setdco and Indonesian group V'Power Corporation in 1994.
+                    In 1998, Mycom Setdco and V'Power sold Lamborghini to the Volkswagen Group where it was placed under
+                    the control of the group's Audi division.
+                </p>
+                <p>New products and model lines were introduced to the brand's portfolio and brought to the market and
+                    saw an increased productivity for the brand.
+                    In the late 2000s, during the worldwide financial crisis and the subsequent economic crisis,
+                    Lamborghini's sales saw a drop of nearly 50 per cent.</p>
+                <p>Lamborghini currently produces the V10-powered Huracán, Urus SUV powered by a twin-turbo V8 engine
+                    and will produce the Revuelto, a V12/electric hybrid, as of 2024.
+                    In addition, the company produces V12 engines for offshore powerboat racing.
+                </p>
+                <p>
+                    Lamborghini Trattori, founded in 1948 by Ferruccio Lamborghini, is headquartered in Pieve di Cento,
+                    Italy and continues to produce tractors.
+                    Since 1973, Lamborghini Trattori has been a separate entity from the automobile manufacturer.
+                </p>
+                <h1 id="History">History</h1>
+                <p class="insert">Main article: History of Lamborghini</p>
+                <p>Manufacturing magnate Italian Ferruccio Lamborghini founded the company in 1963 with the objective of producing a refined grand touring car to compete with offerings from established marques such as Ferrari.
+                    The company's first models, such as the 350 GT, were released in the mid-1960s.
+                    Lamborghini was noted for the 1966 Miura sports coupé, which used a rear mid-engine, rear-wheel drive layout.
+                </p>
+                <p>Lamborghini grew rapidly during its first ten years, but sales fell in the wake of the 1973 worldwide financial downturn and the oil crisis.
+                    Ferruccio Lamborghini sold the company to Georges-Henri Rossetti and René Leimer and retired in 1974.
+                    The company went bankrupt in 1978, and was placed in the receivership of brothers Jean-Claude and Patrick Mimran in 1980.
+                    The Mimrans purchased the company out of receivership by 1984 and invested heavily in its expansion.
+                    Under the Mimrans' management, Lamborghini's model line was expanded from the Countach to include the Jalpa sports car and the LM002 high-performance off-road vehicle.
+                </p>
+                <p>
+                    The Mimrans sold Lamborghini to the Chrysler Corporation in 1987.
+                    After replacing the Countach with the Diablo and discontinuing the Jalpa and the LM002, Chrysler sold Lamborghini to Malaysian investment group Mycom Setdco and Indonesian group V'Power Corporation in 1994.
+                    In 1998, Mycom Setdco and V'Power sold Lamborghini to the Volkswagen Group where it was placed under the control of the group's Audi division.
+                    New products and model lines were introduced to the brand's portfolio and brought to the market and saw an increased productivity for the brand Lamborghini.
+                    In the late 2000s, during the worldwide financial crisis and the subsequent economic crisis, Lamborghini's sales saw a drop of nearly 50 per cent.
+                    In 2021, the CEO of Lamborghini said that by 2024 all its models will be hybrid.
+                </p>
             </div>
-    </header>
-        <div>
-            <ul class="left-side-menu">
-                <li><a href="#" >(Top) </a></li>
-                <li><a href="#History">History</a></li>
-                <li><a href="#Products">Products</a></li>
-                <li><a href="#Toggle Products subsection">Toggle Products subsection</a> </li>
-                <li><a href="#Motorsport">Motorsport</a> </li>
-            </ul>
+
         </div>
-        <div class="content">
-            <h1>Lamborghini</h1>
-            <p><b>Automobili Lamborghini S.p.A.</b> (Italian pronunciation: [autoˈmɔːbili lamborˈɡiːni]) is an Italian manufacturer of luxury sports cars and SUVs based in Sant'Agata Bolognese. The company is owned by the Volkswagen Group through its subsidiary Audi.</p>
-        </div>
-    <div class="right-block">
-        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/df/Lamborghini_Logo.svg/180px-Lamborghini_Logo.svg.png">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Lamborghini_logo.svg/200px-Lamborghini_logo.svg.png">
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg/220px-Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg">
-        <span style="font-size: 14px">Headquarters in Sant'Agata Bolognese</span>
     </div>
 </main>
 </body>
