--- a/index.html
+++ b/index.html
@@ -8,22 +8,16 @@
 </head>
 <body>
 <main>
-    <header class="header-list ">
+    <header>
         <div class="header-start">
-            <input type="checkbox" role="button" aria-haspopup="true" data-event-name="dropdown" class="checkbox"
-                   aria-label="Main menu" aria-expanded="false">
+            <img class="menu-button" src="./3.png" style="margin-right: 10px;">
 
-            <a href="https://en.wikipedia.org/wiki/Main_Page" class="mw-logo">
-                <img class="logo-icon" src="https://en.wikipedia.org/static/images/icons/wikipedia.png" alt=""
-                     aria-hidden="true" height="50" width="50">
-                <span class="logo-span">
-		                <img class="logo-wordmark" alt="Wikipedia"
-                             src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-wordmark-en.svg"
-                             style="width: 7.5em; height: 1.125em;">
-		                <img class="logo-tagline" alt="The Free Encyclopedia"
-                             src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-tagline-en.svg"
-                             width="117" height="13" style="width: 7.3125em; height: 0.8125em;">
-	                </span>
+            <a href="https://en.wikipedia.org/wiki/Main_Page" class="logo">
+                <img class="logo-icon" src="https://en.wikipedia.org/static/images/icons/wikipedia.png" alt="" aria-hidden="true" height="50" width="50">
+                <span class="logo-container">
+                    <img class="logo-wordmark" alt="Wikipedia" src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-wordmark-en.svg" style="width: 7.5em; height: 1.125em;">
+                    <img class="logo-tagline" alt="The Free Encyclopedia" src="https://en.wikipedia.org/static/images/mobile/copyright/wikipedia-tagline-en.svg" width="117" height="13" style="width: 7.3125em; height: 0.8125em;">
+                </span>
             </a>
             <div class="search">
                 <input class="input" placeholder="Search Wikipedia" type="text">
@@ -34,54 +28,221 @@
         <div class="registration">
             <a href="#" alt="Create account">Create account</a>
             <a href="#" alt="Log in" style=" margin-left: 10px">Log in</a>
+            <img class="menu-button" src="./menu.png">
         </div>
     </header>
     <div>
         <ul class="left-side-menu">
+            <p class="hide-content-label">Contents [<a href="">hide</a>] </p>
             <li><a href="#">(Top) </a></li>
             <li><a href="#History">History</a></li>
             <li><a href="#Products">Products</a></li>
             <li><a href="#Motorsport">Motorsport</a></li>
+            <li><a href="#Current factory drivers">Current factory drivers</a></li>
+            <li><a href="#Lamborghini in Formula One">Lamborghini in Formula One</a></li>
+            <li><a href="#Toggle Marketing subsection">Marketing</a></li>
+            <li><a href="#Corporate affairs">Corporate affairs</a></li>
+            <li><a href="#Licensing">Licensing</a></li>
+            <li><a href="#Toggle Museums subsection">Museums</a></li>
+            <li><a href="#See also">See also</a></li>
+            <li><a href="#Notes">Notes</a></li>
+            <li><a href="#Citations">Citations</a></li>
+            <li><a href="#References">References</a></li>
+            <li><a href="#External links">External links</a></li>
         </ul>
     </div>
     <div>
+        <div style="height: 30px;"></div>
         <h1>Lamborghini</h1>
 
         <div class="tool-bar">
             <div class="flex-div">
                 <p>Article</p>
-                <p>Talk</p>
+                <a href="">Talk</a>
             </div>
             <div class="flex-div">
                 <p>Read</p>
-                <p>View source</p>
-                <p>View history</p>
+                <a>View source</a>
+                <a>View history</a>
                 <p>Tools</p>
             </div>
         </div>
         From Wikipedia, the free encyclopedia
         <p class="insert">For other uses, see Lamborghini (disambiguation).</p>
-        <div>
-            <div class="right-block-position">
-                <span class="table-name">Automobili Lamborghini S.p.A.</span>
-                <div class="right-block">
-                    <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/df/Lamborghini_Logo.svg/180px-Lamborghini_Logo.svg.png">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Lamborghini_logo.svg/200px-Lamborghini_logo.svg.png">
-                    <div>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg/220px-Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg">
-                        <span>Headquarters in Sant'Agata Bolognese</span>
-                    </div>
-                    <lable>
-                        <lable>
-                            Type
-                        </lable>
-                        <lable>
-                            Subsidiary
-                        </lable>
-                    </lable>
+        <tr>
+            <table class="right-block-position table">
+                <caption class="table-name">Automobili Lamborghini S.p.A.</caption>
+                <tbody class="right-block">
+                <tr>
+                    <td colspan="2">
+                        <img src="https://upload.wikimedia.org/wikipedia/en/thumb/d/df/Lamborghini_Logo.svg/180px-Lamborghini_Logo.svg.png">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/Lamborghini_logo.svg/200px-Lamborghini_logo.svg.png">
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <span>
+                            <a href="https://en.wikipedia.org/wiki/File:Lamborghini,_Sant%27Agata_Bolognese,_Bologna.jpg">
+                                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3b/Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg/220px-Lamborghini%2C_Sant%27Agata_Bolognese%2C_Bologna.jpg">
+                            </a>
+                        </span>
+                        <div>Headquarters in Sant'Agata Bolognese</span>
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Type
+                    </th>
+                    <td class="align-left">
+                        Subsidiary
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Industry
+                    </th>
+                    <td class="align-left">
+                        Automotive
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Founded
+                    </th>
+                    <td class="align-left">
+                        1963; 60 years ago
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Founder
+                    </th>
+                    <td class="align-left">
+                        Ferruccio Lamborghini
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Headquarters
+                    </th>
+                    <td class="align-left">
+                        Sant'Agata Bolognese,<br> Emilia-Romagna, Italy
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Number of<br> locations
+                    </th>
+                    <td class="align-left">
+                        135 dealerships
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Area served
+                    </th>
+                    <td class="align-left">
+                        Worldwide
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Key people
+                    </th>
+                    <td class="align-left">
+                        Stephan Winkelmann (CEO)
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Production output
+                    </th>
+                    <td class="align-left">
+                        Increase 9,233 vehicles (2022)
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Revenue
+                    </th>
+                    <td class="align-left">
+                        Increase €2.38 billion (2022)
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Operating income
+                    </th>
+                    <td class="align-left">
+                        Increase €614 million
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Net income
+                    </th>
+                    <td class="align-left">
+                        Increase €10.1 million (2014)
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Total equity
+                    </th>
+                    <td class="align-left">
+                        Increase €1.832 billion (2014)
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Owner
+                    </th>
+                    <td class="align-left">
+                        Volkswagen Group
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Number of employees
+                    </th>
+                    <td class="align-left">
+                        1,779 (December 2020)
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Parent
+                    </th>
+                    <td class="align-left">
+                        Audi AG
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Subsidiaries
+                    </th>
+                    <td class="align-left">
+                        Ducati Motor Holding
+                        <br>S.p.A.
+                        <br>Italdesign Giugiaro
+                    </td>
+                </tr>
+                <tr>
+                    <th scope="row">
+                        Website
+                    </th>
+                    <td class="align-left">
+                        <a href="lamborghini.com">lamborghini.com</a>
+                    </td>
+                </tr>
 
-                </div>
-            </div>
+
+                </tbody>
+            </table>
             <div class="content">
                 <p><b>Automobili Lamborghini S.p.A.</b> (<label class="little-text">Italian pronunciation:</label> [<a
                         href="https://en.wikipedia.org/wiki/Help:IPA/Italian">autoˈmɔːbili lamborˈɡiːni]</a> )
@@ -118,27 +279,87 @@
                 </p>
                 <h1 id="History">History</h1>
                 <p class="insert">Main article: History of Lamborghini</p>
-                <p>Manufacturing magnate Italian Ferruccio Lamborghini founded the company in 1963 with the objective of producing a refined grand touring car to compete with offerings from established marques such as Ferrari.
+                <p>Manufacturing magnate Italian Ferruccio Lamborghini founded the company in 1963 with the objective of
+                    producing a refined grand touring car to compete with offerings from established marques such as
+                    Ferrari.
                     The company's first models, such as the 350 GT, were released in the mid-1960s.
-                    Lamborghini was noted for the 1966 Miura sports coupé, which used a rear mid-engine, rear-wheel drive layout.
+                    Lamborghini was noted for the 1966 Miura sports coupé, which used a rear mid-engine, rear-wheel
+                    drive layout.
                 </p>
-                <p>Lamborghini grew rapidly during its first ten years, but sales fell in the wake of the 1973 worldwide financial downturn and the oil crisis.
-                    Ferruccio Lamborghini sold the company to Georges-Henri Rossetti and René Leimer and retired in 1974.
-                    The company went bankrupt in 1978, and was placed in the receivership of brothers Jean-Claude and Patrick Mimran in 1980.
+                <p>Lamborghini grew rapidly during its first ten years, but sales fell in the wake of the 1973 worldwide
+                    financial downturn and the oil crisis.
+                    Ferruccio Lamborghini sold the company to Georges-Henri Rossetti and René Leimer and retired in
+                    1974.
+                    The company went bankrupt in 1978, and was placed in the receivership of brothers Jean-Claude and
+                    Patrick Mimran in 1980.
                     The Mimrans purchased the company out of receivership by 1984 and invested heavily in its expansion.
-                    Under the Mimrans' management, Lamborghini's model line was expanded from the Countach to include the Jalpa sports car and the LM002 high-performance off-road vehicle.
+                    Under the Mimrans' management, Lamborghini's model line was expanded from the Countach to include
+                    the Jalpa sports car and the LM002 high-performance off-road vehicle.
                 </p>
                 <p>
                     The Mimrans sold Lamborghini to the Chrysler Corporation in 1987.
-                    After replacing the Countach with the Diablo and discontinuing the Jalpa and the LM002, Chrysler sold Lamborghini to Malaysian investment group Mycom Setdco and Indonesian group V'Power Corporation in 1994.
-                    In 1998, Mycom Setdco and V'Power sold Lamborghini to the Volkswagen Group where it was placed under the control of the group's Audi division.
-                    New products and model lines were introduced to the brand's portfolio and brought to the market and saw an increased productivity for the brand Lamborghini.
-                    In the late 2000s, during the worldwide financial crisis and the subsequent economic crisis, Lamborghini's sales saw a drop of nearly 50 per cent.
+                    After replacing the Countach with the Diablo and discontinuing the Jalpa and the LM002, Chrysler
+                    sold Lamborghini to Malaysian investment group Mycom Setdco and Indonesian group V'Power Corporation
+                    in 1994.
+                    In 1998, Mycom Setdco and V'Power sold Lamborghini to the Volkswagen Group where it was placed under
+                    the control of the group's Audi division.
+                    New products and model lines were introduced to the brand's portfolio and brought to the market and
+                    saw an increased productivity for the brand Lamborghini.
+                    In the late 2000s, during the worldwide financial crisis and the subsequent economic crisis,
+                    Lamborghini's sales saw a drop of nearly 50 per cent.
                     In 2021, the CEO of Lamborghini said that by 2024 all its models will be hybrid.
                 </p>
+                <table class="owners-table">
+                    <caption>Lamborghini ownership</caption>
+                    <tbody class="owners-table-body">
+                    <div>
+                        <tr>
+                            <th>Years</th>
+                            <th>Owner</th>
+                        </tr>
+                        <tr>
+                            <th>1963–1972</th>
+                            <th class="align-left">Ferruccio Lamborghini</th>
+                        </tr>
+                        <tr>
+                            <th>1972–1977</th>
+                            <th class="align-left">Georges-Henri Rossetti and René Leimer</th>
+                        </tr>
+                        <tr>
+                            <th>1977–1984</th>
+                            <th class="align-left">Receivership</th>
+                        </tr>
+                        <tr>
+                            <th>1984–1987</th>
+                            <th class="align-left">Patrick Mimran</th>
+                        </tr>
+                        <tr>
+                            <th>1987–1994</th>
+                            <th class="align-left">Chrysler Corporation</th>
+                        </tr>
+                        <tr>
+                            <th>1994–1995</th>
+                            <th class="align-left">MegaTech</th>
+                        </tr>
+                        <tr>
+                            <th>1995–1998</th>
+                            <th class="align-left">V'Power and Mycom Sedtco</th>
+                        </tr>
+                        <tr>
+                            <th>1998–present</th>
+                            <th class="align-left">Audi AG</th>
+                        </tr>
+                    </div>
+                    </tbody>
+                </table>
+                <figure class="photo-lamborghini" typeof="mw:File/Thumb">
+                    <a href="/wiki/File:Ferruccio_lamborghini.jpg" class=""><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Ferruccio_lamborghini.jpg/220px-Ferruccio_lamborghini.jpg" width="220" height="149" class=""></a>
+                    <figcaption class="photo-text">
+                        <a href="https://en.wikipedia.org/wiki/File:Ferruccio_lamborghini.jpg" title="Ferruccio Lamborghini">Ferruccio Lamborghini</a> with a <br> <a href="/wiki/Lamborghini_Jarama" title="Lamborghini Jarama">Jarama</a> and a tractor of his brand</figcaption></figure>
             </div>
 
-        </div>
+
+    </div>
     </div>
 </main>
 </body>
